package org.heckcorp.spacegame.map.swing;

public enum MovementAnimationState {
    MOVING, NOT_MOVING
}
