@startuml

title __SWING's Class Diagram__\n

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.AnimatedImageIcon {
            ~ loop : boolean
            - component : Component
            - currentFrame : int
            - images : BufferedImage[]
            - timer : Timer
            - x : int
            - y : int
            + AnimatedImageIcon()
            + getFrameCount()
            + paintIcon()
            + setAnimated()
            + setAnimationTime()
            + setCurrentFrame()
            + setLoop()
            + step()
            - setImageByFrame()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.Counter {
            ~ lastTime : long
            {static} - ANIMATION_TIME : int
            {static} - MOVE_SPEED : int
            - borderColor : Color
            - destination : Point
            - hidden : boolean
            - mapLocation : Point
            - mapPosition : Point
            - moveTimer : Timer
            - normal : Point2D
            - offset : Point
            - oldLocation : Point
            - onScreen : boolean
            - realLocation : Point2D
            - speed : int
            - toNotify : Object
            + Counter()
            + getCenterLocation()
            + getIcon()
            + getMapPosition()
            + isHidden()
            + moveCenterTo()
            + moveTo()
            + notifyWhenAnimationComplete()
            + paintComponent()
            + setAnimated()
            + setAnimationTime()
            + setCenterLocation()
            + setCurrentFrame()
            + setHidden()
            + setLoop()
            + setMapLocation()
            + setMapPosition()
            + setOnScreen()
            + setSpeed()
            - updateCounterLocation()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.MapPane {
            - oldBounds : Rectangle
            - tileHeight : int
            - tileWidth : int
            - viewport : Rectangle
            + MapPane()
            + drawHexCenters()
            + getHexCenter()
            + getHexCoordinates()
            + getHexCorner()
            + getViewport()
            + getViewportHexCenter()
            + getViewportPixelSize()
            + getViewportSize()
            + guessHex()
            + initialize()
            + isInViewport()
            + isMapPointInViewport()
            + paintComponent()
            + setBounds()
            + setViewportBounds()
            + setViewportPosition()
            - drawHex()
            - toMapCoordinates()
            - toViewportCoordinates()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.MapView {
            {static} + MAP_LAYER : Integer
            {static} + SPRITE_LAYER : Integer
            {static} + TOP_SPRITE_LAYER : Integer
            - hScrollBar : JScrollBar
            - layeredPane : JLayeredPane
            - listeners : Set<MapViewListener>
            - vScrollBar : JScrollBar
            + MapView()
            + add()
            + addMapViewListener()
            + adjustmentValueChanged()
            + centerHex()
            + centerRectangle()
            + getMapPane()
            + initialize()
            + isInitialized()
            + moveToFront()
            + removeCounter()
            - adjustPositions()
            - notifyViewportBounds()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        interface org.heckcorp.spacegame.map.swing.MapViewListener {
            {abstract} + setViewportBounds()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.MiniMap {
            - viewport : Rectangle
            + MiniMap()
            + getPreferredSize()
            + initialize()
            + paintComponent()
            + setViewportBounds()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        enum MovementAnimationState {
          MOVING
          NOT_MOVING
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.UIResources {
            + selectedHexPix : BufferedImage[]
            + spaceshipPic : BufferedImage[]
            + tilePic : BufferedImage[]
            {static} - instance : UIResources
            + getAttackArrow()
            + getExplosion()
            {static} + getInstance()
            + getSelection()
            + getSpaceshipImages()
            {static} + initializeResources()
            - UIResources()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        class org.heckcorp.spacegame.map.swing.Util {
            {static} + getImage()
            {static} + getImages()
            {static} + getResource()
        }
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace map {
      namespace swing {
        interface org.heckcorp.spacegame.map.swing.ViewMonitor {
            {abstract} + hexClicked()
        }
      }
    }
  }
  

  org.heckcorp.spacegame.map.swing.AnimatedImageIcon -up-|> javax.swing.ImageIcon
  org.heckcorp.spacegame.map.swing.Counter -up-|> javax.swing.JLabel
  org.heckcorp.spacegame.map.swing.Counter o-- org.heckcorp.spacegame.map.swing.AnimatedImageIcon : icon
  org.heckcorp.spacegame.map.swing.MapPane -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.map.swing.MapPane o-- org.heckcorp.spacegame.map.HexMap : map
  org.heckcorp.spacegame.map.swing.MapPane o-- org.heckcorp.spacegame.map.swing.UIResources : resources
  org.heckcorp.spacegame.map.swing.MapView .up.|> java.awt.event.AdjustmentListener
  org.heckcorp.spacegame.map.swing.MapView -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.map.swing.MapView o-- org.heckcorp.spacegame.map.HexMap : map
  org.heckcorp.spacegame.map.swing.MapView o-- org.heckcorp.spacegame.map.swing.MapPane : mapPane
  org.heckcorp.spacegame.map.swing.MiniMap .up.|> org.heckcorp.spacegame.map.swing.MapViewListener
  org.heckcorp.spacegame.map.swing.MiniMap -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.map.swing.MiniMap o-- org.heckcorp.spacegame.map.HexMap : map
  org.heckcorp.spacegame.map.swing.UIResources o-- org.heckcorp.spacegame.map.swing.Counter : attackArrow
  org.heckcorp.spacegame.map.swing.UIResources o-- org.heckcorp.spacegame.map.swing.Counter : explosion
  org.heckcorp.spacegame.map.swing.UIResources o-- org.heckcorp.spacegame.map.swing.Counter : selection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
